--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,9 @@
 [package]
 name = mvn-maven
 url = https://github.com/apache/maven/archive/maven-2.2.0.tar.gz
-archives = https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.5/maven-2.0.5.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.6/maven-2.0.6.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.7/maven-2.0.7.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.8/maven-2.0.8.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.9/maven-2.0.9.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0/maven-2.0.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.2.0/maven-2.2.0.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.2.1/maven-2.2.1.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.0.4/maven-3.0.4.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.0/maven-3.0.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.6.0/maven-3.6.0.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.6.1/maven-3.6.1.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.3.9/maven-3.3.9.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.0.5/maven-3.0.5.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.1/maven-2.0.1.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.10/maven-2.0.10.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.11/maven-2.0.11.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.2/maven-2.0.2.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.4/maven-2.0.4.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.1.0/maven-2.1.0.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.0.3/maven-3.0.3.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.6.1/maven-3.6.1.pom :
+archives = https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.5/maven-2.0.5.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.6/maven-2.0.6.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.7/maven-2.0.7.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.8/maven-2.0.8.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.9/maven-2.0.9.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0/maven-2.0.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.2.0/maven-2.2.0.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.2.1/maven-2.2.1.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.0.4/maven-3.0.4.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.0/maven-3.0.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.6.1/maven-3.6.1.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.3.9/maven-3.3.9.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.0.5/maven-3.0.5.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.1/maven-2.0.1.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.10/maven-2.0.10.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.11/maven-2.0.11.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.2/maven-2.0.2.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.0.4/maven-2.0.4.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/2.1.0/maven-2.1.0.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.0.3/maven-3.0.3.pom : https://repo1.maven.org/maven2/org/apache/maven/maven/3.6.1/maven-3.6.1.pom :
 giturl = https://github.com/apache/maven.git
+domain = 
 
 [autospec]
 # build 32 bit libraries
@@ -17,7 +18,7 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
-# this package is a library compatability package and only ships versioned library files
+# this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = false
